edition = "2023";
package errors;

option go_package = "/proto";
import "google/protobuf/go_features.proto";
option features.(pb.go).api_level = API_OPAQUE;


message ValidationError {
  string message = 1;
  repeated string members = 2;
}

message EntityError {
  string entity_name = 1;
  string id = 2;
}

message ErrorDetail {
  int32 code = 1;
  string message = 2;
  repeated ValidationError validation_errors = 3;
  repeated EntityError entity_errors = 4;
}