edition = "2023";
package products;

option go_package = "/proto";

import "google/protobuf/go_features.proto";
option features.(pb.go).api_level = API_OPAQUE;

message ProductRequest {
  string integration_id = 1;
  string fnrec = 2;
}

message BatchProductRequest {
  repeated ProductRequest requests = 1;
}

enum ProductType {
  PRODUCT_TYPE_UNKNOWN = 0;
}

enum ProductionType {
  PRODUCTION_TYPE_UNKNOWN = 0;
  PRODUCTION_TYPE_PRODUCING = 1;
  PRODUCTION_TYPE_PURCHASING = 2;
}

enum ProductGroup {
  PRODUCT_GROUP_UNSPECIFIED = 0; // Unknown / "Unknown"

  PRODUCT_GROUP_KITCHENS = 1; // 14b85d2e-da37-4a50-8244-0616a0b31794
  PRODUCT_GROUP_CASE_FURNITURE = 2; // 21644026-d9ca-4da2-b91e-1adb2507a824
  PRODUCT_GROUP_BEDDING_SETS = 3; // 6d31ec4d-33a5-48f0-b9a2-3666a9fab68b
  PRODUCT_GROUP_SOFAS = 4; // f09f1c26-12f2-4d50-8c94-3f347b2970a2
  PRODUCT_GROUP_COVERS = 5; // c8a49a04-07c6-4538-9054-478abcca71e5
  PRODUCT_GROUP_BLANKETS = 6; // 66d86f8e-6812-4182-82cc-4792937e299a
  PRODUCT_GROUP_BED_BASES_WITH_STORAGE = 7; // 2743d9f1-1244-440f-addb-653efe23492c
  PRODUCT_GROUP_SOFA_COMPONENTS = 8; // 1362ba98-6ea2-45a4-9134-67813a17d2a5
  PRODUCT_GROUP_ERGOMOTION = 9; // 5471ed6b-c477-4853-a718-6b6bdfacb5ad
  PRODUCT_GROUP_NON_PRODUCTS = 10; // 7c6ad459-836a-4796-87bd-77f5dab8cac1
  PRODUCT_GROUP_SMALL_FURNITURE = 11; // 260d757a-bc45-4e95-9225-96cdf0cfe92f
  PRODUCT_GROUP_MATTRESSES = 12; // 81025548-4083-40bb-a0e3-a22652c500b5
  PRODUCT_GROUP_SLATTED_BASES = 13; // 66f0375b-9789-49e1-81f9-a824d649e3c8
  PRODUCT_GROUP_MATTRESS_TOPPERS = 14; // 8ac5ad9c-1772-4c37-86be-ab7c35c64761
  PRODUCT_GROUP_PILLOWS = 15; // 868b44a7-40a3-4152-bc75-b41e597d1d98
  PRODUCT_GROUP_BEDS = 16; // c7a26159-5856-49df-aed2-d053f672ae11
  PRODUCT_GROUP_BED_BASES = 17; // bd9c804c-a698-4075-b8bf-dcc197e33f0a
  PRODUCT_GROUP_MISCELLANEOUS = 18; // 117d995d-9ae7-487f-99fe-eb0c3fe5d460

  PRODUCT_GROUP_CASE_FURNITURE_ACCESSORIES = 19; // c3dae860-b36c-4133-8407-8f7e4280f65d
  PRODUCT_GROUP_MURPHY_BEDS = 20; // 37d0e4b6-54ac-47ca-9a9a-83389118fb0d
  PRODUCT_GROUP_WARDROBES = 21; // d717a93d-ab66-4e57-95c3-98c9b7a8c8df
  PRODUCT_GROUP_BED_ACCESSORIES = 22; // 6d4aee05-19a2-4f8f-9d0b-2a6b7c41e189
  PRODUCT_GROUP_MURPHY_BED_ACCESSORIES = 23; // a286d6cf-31e7-494a-b17c-7d1d9a87d6d1
  PRODUCT_GROUP_SMALL_FURNITURE_ACCESSORIES = 24; // 51c5e588-ef43-496d-80b5-5d5832619cae
  PRODUCT_GROUP_WARDROBE_ACCESSORIES = 25; // 5ee02ed2-01a0-43c8-bb97-7675f01fbc64
  PRODUCT_GROUP_INTERIOR_DECORATION = 26; // ecb374a7-3eaf-4e55-a381-2ce38ee64c02
  PRODUCT_GROUP_TEXTILES = 27; // 6dc4e692-4f2a-4aed-bb91-d3aa14cf8b5b
  PRODUCT_GROUP_SLEEP_THERAPY = 28; // a41f277e-378c-4b7e-a16f-fa08a01a40cf
  PRODUCT_GROUP_ELECTRONICS = 29; // accfdbbb-628f-4611-bda2-9f912c6f26bd
  PRODUCT_GROUP_CLOTHING = 30; // de5b8449-a610-427c-a345-f24664789a9d
  PRODUCT_GROUP_ORTHOPEDICS = 31; // e9b7cd10-5145-4e28-8491-269adb048c6a
  PRODUCT_GROUP_COFFEE_TABLES = 32; // 671afa27-9707-4cc2-9719-21be9b8281fb
  PRODUCT_GROUP_KING_KOIL = 33; // ef530893-fcb2-420d-85a1-3ea798495db9
  PRODUCT_GROUP_ERGOMOTION_ACCESSORIES = 34; // 37d04227-ddb1-4e79-91e6-e781b769689c
  PRODUCT_GROUP_CHILDREN_BED_BASES = 35; // c1073c8b-866e-455f-8170-0114466de42f
  PRODUCT_GROUP_PILLOW_COVERS = 36; // 83b31fe3-03b9-499a-8cb3-ddd60188516e
  PRODUCT_GROUP_TABLEWARE = 37; // f0383727-77da-410b-bf57-d62e850d87f2
  PRODUCT_GROUP_SETS = 38; // 729ff321-96e4-4bec-9e7e-eec9573ae58d
  PRODUCT_GROUP_HOME_OFFICE = 39; // 2aefbe7a-0c26-4e0c-84ae-9d3098528560
  PRODUCT_GROUP_CHILDREN_BEDROOMS = 40; // 08537964-33d6-454e-b422-247896afc313
  PRODUCT_GROUP_SPACE_ORGANIZATION_STORAGE = 41; // 9bc21671-bf65-4570-bdaf-344af5c22157
  PRODUCT_GROUP_BATHROOM_PRODUCTS = 42; // d570fea1-a978-4915-8de0-d4aa0aa1ac79
  PRODUCT_GROUP_TOYS = 43; // 64f47b87-5359-473d-946c-a540287fce78
  PRODUCT_GROUP_ACCESSORIES = 44; // 856b85f1-2639-440f-b904-af0c579943d1
  PRODUCT_GROUP_NEW_YEAR = 45; // 926f2f98-4de7-4c80-856d-57bd6c04847d
  PRODUCT_GROUP_ARMCHAIRS = 46; // fadf4ffa-55f9-4674-b254-ec6fafd67be4
  PRODUCT_GROUP_MASSAGE_CHAIRS = 47; // d390de83-2a44-417a-873b-485ecce030ca
  PRODUCT_GROUP_LIVING_ROOMS = 48; // f8a304ef-212d-419e-82ed-61292bb0db31
  PRODUCT_GROUP_LIGHTING = 49; // 9f611676-2fd6-4852-be00-a17796592612
  PRODUCT_GROUP_KAFKA_TEST = 50; // aec329db-d9e4-42db-af89-cb0ae05efc00
  PRODUCT_GROUP_DECOR = 51; // c8dd79ea-b42b-4cc5-ad74-1d7862c4d253

  PRODUCT_GROUP_SPACE_ORGANIZATION_UPPER = 52; // e65c8693-421b-4e50-97b7-df79ae23789c
  PRODUCT_GROUP_HOME_CARE_UPPER = 53; // 1c90ac25-9c16-48f7-bc8b-8a809e7c2705
  PRODUCT_GROUP_SPACE_ORGANIZATION = 54; // bb2724ce-aa43-4c27-9e54-a2d3247d68cc
  PRODUCT_GROUP_HOME_CARE = 55; // 6a139e59-5578-4c66-8a30-8abf844ec40c
  PRODUCT_GROUP_HALLWAYS = 56; // 7c6ed323-06a6-431a-b549-616f4f43bdf5
  PRODUCT_GROUP_FURNITURE_PROTECTION_AND_CARE = 57; // 99bb0a71-37bd-496d-b261-a8ffd1adcb8b
  PRODUCT_GROUP_OUTDOOR_FURNITURE = 58; // 4ce1132d-03d7-4cb4-84d7-325c5751aca7

  PRODUCT_GROUP_STORAGE = 59; // 2b360d0c-b5a4-4db8-b682-ead00d0c2c58
  PRODUCT_GROUP_INTERIOR = 60; // c1357f61-440c-4f1e-aeb4-15a26895e886
  PRODUCT_GROUP_SEASONAL_PRODUCTS = 61; // 4d7ec861-a530-4c5a-b133-12d173fca3be
  PRODUCT_GROUP_FRAGRANCES = 62; // 189995ff-cb88-408a-9ea4-c82672f71b22
}

message Pack {
  double volume = 1;
  double length = 2;
  double width = 3;
  double height = 4;
  double weight = 5;
}

message Product {
  string id = 1;
  string name = 2;
  ProductionType production_type = 3;
  string fnrec = 4;
  bool is_service = 5;
  ProductGroup group = 6;
  string series_id = 7;
  string category_id = 8;
  string account_provider = 9;
  string non_standard_category_id = 10;
  Pack pack = 11;
}


message BatchResponse {
  repeated Product products = 1;
}

service ProductService {
  rpc BatchRequest(BatchProductRequest) returns(BatchResponse);
}